accord-web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: accord-web
  name: accord-web
  namespace: accord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accord-web
  template:
    metadata:
      labels:
        app: accord-web
    spec:
      containers:
        - image: quay.io/accord/accord-web:latest
          name: accord-web
          volumeMounts:
            - name: accord-web-nginx-config
              mountPath: /etc/nginx/conf.d
            - name: accord-web-assets-config
              mountPath: /usr/share/nginx/html/assets
#              readOnly: false
      volumes:
        - name: accord-web-nginx-config
          configMap:
            name: accord-web-nginx-config
        - name: accord-web-assets-config
          configMap:
            name: accord-web-assets-config
