mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: accord
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  replicas: 3
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo
        command:
        - mongod 
        - "--bind_ip_all"
        - "--replSet"
        - rs0
        ports:
        - containerPort: 27017
        volumeMounts:
#        - name: mongo-volume
#          mountPath: /data/db
        - name: mongodb-env-configmap
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mongodb-env-configmap
          configMap:
            name: mongodb-env-configmap
            defaultMode: 0666
#  volumeClaimTemplates:
#  - metadata:
#      name: mongo-volume
#    spec:
#      accessModes: [ "ReadWriteOnce" ]
#      resources:
#        requests:
#          storage: 2Gi
