accord-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: accord-service
  name: accord-service-service
  namespace: accord
spec:
  ports:
    - name: "accord-service-port"
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: accord-service
