mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: accord
spec:
  ports:
    - name: "mongo"
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: mongo
